logs/vdisk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vdisk'...
Listing './lib/python3.5/site-packages/vdisk/actions'...
Compiling './lib/python3.5/site-packages/vdisk/actions/install.py'...
***   File "./lib/python3.5/site-packages/vdisk/actions/install.py", line 216
    mode = target_item.get("mode", 0644)
                                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/vdisk/helpers.py'...
***   File "./lib/python3.5/site-packages/vdisk/helpers.py", line 189
    def copy_file(ns, source, target, owner="root", group="root", mode=0644):
                                                                          ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/vdisk/preset'...
Listing './lib/python3.5/site-packages/vdisk-0.3.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
